iphone stretch bug fix

--- a/src/App/MainPage/cards/components/ProjectCard/ExpandedProject/ExpandedProject.scss
+++ b/src/App/MainPage/cards/components/ProjectCard/ExpandedProject/ExpandedProject.scss
@@ -82,6 +82,11 @@
             .projectImage {
                 border-radius: 5px;
                 height: 300px;
+                
+                @media screen and (max-width: 400px) {
+                    max-width: 300px;
+                    object-fit: cover;
+                }
             }
         }
 
